--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "^1.0.4",
+    "@react-email/render": "^2.0.2",
     "@supabase/supabase-js": "^2.87.1",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -63,15 +65,19 @@
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "prisma": "^5.22.0",
+    "razorpay": "^2.9.6",
     "react": "19.2.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
+    "resend": "^6.7.0",
+    "sha256": "^0.2.0",
     "sonner": "^2.0.7",
     "supabase": "^2.67.1",
     "tailwind-merge": "^3.4.0",
+    "uniqid": "^5.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.13"
   },
@@ -83,6 +89,8 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sha256": "^0.2.2",
+    "@types/uniqid": "^5.3.4",
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
